--- a/phim-anh/watchmen/index.html
+++ b/phim-anh/watchmen/index.html
@@ -247,7 +247,7 @@ img.emoji {
 															<div class="header-search-popup">
 																<div class="header-search-flex">
 																	<form role="search" method="get" class="search-form" action="/wordpress/" aria-label="Site Search">
-																		<input type="search" class="form-control header-search-field" placeholder="Type To Search" name="s" id="search">
+																		<input type="search" class="form-control header-search-field" placeholder="Tìm trong trang ..." name="s" id="search">
 																		<button type="submit" class="search-submit"><i class="fa fa-search"></i></button>
 																	</form>
 																	<button type="button" id="header-search-close" class="close-style header-search-close" aria-label="Search Popup Close"></button>
@@ -449,7 +449,7 @@ img.emoji {
 <form role="search" method="get" class="search-form" action="/wordpress/">
 	<label>
 		<span class="screen-reader-text">Search for:</span>
-		<input type="search" class="search-field" placeholder="Search …" name="s" id="s">
+		<input type="search" class="search-field" placeholder="Tìm trong trang ..." name="s" id="s">
 	</label>
 	<button type="submit" class="search-submit" value="Search">
 		<i class="fa fa-search"></i>
