--- a/blogs/hoc-tap/tai-lieu-wprdress-iib/index.html
+++ b/blogs/hoc-tap/tai-lieu-wprdress-iib/index.html
@@ -325,12 +325,12 @@ img.emoji {
                 <div class="col-12">
                     <div class="breadcrumb-content">
                         <div class="breadcrumb-heading">
-								<h1>Tài liệu Wordress IIB</h1>
+								<h1>Tài liệu Wordpress IIB</h1>
                         </div>
 						<ol class="breadcrumb-list">
 							<li><a href="/wordpress/"><i class="fa fa-home"></i></a></li>
 							<li>
-								Tài liệu Wprdress IIB							</li>
+								Tài liệu Wordress IIB							</li>
 						</ol>
                     </div>                    
                 </div>
