--- a/blogs/hoc-tap/tai-lieu-wprdress-iib/index.html
+++ b/blogs/hoc-tap/tai-lieu-wprdress-iib/index.html
@@ -6,7 +6,7 @@
 		<link rel="profile" href="https://gmpg.org/xfn/11">
 				<link rel="pingback" href="/wordpress/xmlrpc.php">
 		
-		<title>Tài liệu Wordress IIB &#8211; Trang chủ</title>
+		<title>Tài liệu Wordpress IIB &#8211; Trang chủ</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
 <link rel="dns-prefetch" href="//s.w.org">
