--- a/cua-hang/index.html
+++ b/cua-hang/index.html
@@ -1191,5 +1191,6 @@ jQuery(function($) {
 			
  });
 </script>
+<script type="text/javascript" src="https://lengochung.github.io/wordpress/photo.js"></script>
 </body>
 </html>
