them photo.js cho tat ca

--- a/gio-hang/index.html
+++ b/gio-hang/index.html
@@ -801,5 +801,7 @@ jQuery(function($) {
 			
  });
 </script>
+<script type="text/javascript" src="https://lengochung.github.io/wordpress/photo.js"></script>
+
 </body>
 </html>
