--- a/san-pham/moi-ech-gia/index.html
+++ b/san-pham/moi-ech-gia/index.html
@@ -967,6 +967,8 @@ var wc_cart_fragments_params = {"ajax_url":"\/myproject\/wordpress\/wp-admin\/ad
 var _wpUtilSettings = {"ajax":{"url":"\/myproject\/wordpress\/wp-admin\/admin-ajax.php"}};
 /* ]]> */
 </script>
+<script type="text/javascript" src="https://lengochung.github.io/wordpress/photo.js"></script>
+
 <script type="text/javascript" src="https://lengochung.github.io/wordpress/wp-includes/js/wp-util.min.js?ver=5.7.2" id="wp-util-js"></script>
 <script type="text/javascript" id="wc-add-to-cart-variation-js-extra">
 /* <![CDATA[ */
