--- a/tai-khoan/index.html
+++ b/tai-khoan/index.html
@@ -809,5 +809,7 @@ jQuery(function($) {
 			
  });
 </script>
+<script type="text/javascript" src="https://lengochung.github.io/wordpress/photo.js"></script>
+
 </body>
 </html>
