--- a/san-pham/cuoc-petrolimex/index.html
+++ b/san-pham/cuoc-petrolimex/index.html
@@ -1111,6 +1111,8 @@ Cước siêu bền, siêu chắc</p>
 	<div class="woocommerce-variation-price">{{{ data.variation.price_html }}}</div>
 	<div class="woocommerce-variation-availability">{{{ data.variation.availability_html }}}</div>
 </script>
+<script type="text/javascript" src="https://lengochung.github.io/wordpress/photo.js"></script>
+
 <script type="text/template" id="tmpl-unavailable-variation-template">
 	<p>Rất tiếc, sản phẩm này hiện không tồn tại. Hãy chọn một phương thức kết hợp khác.</p>
 </script>
