--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi" prefix="og: https://ogp.me/ns#">
 <head>
 	<meta charset="UTF-8">
+	<meta google-site-verification: googleb2c31df354e94e80.html >
 		
 <!-- Search Engine Optimization by Rank Math - https://s.rankmath.com/home -->
 <title>Home - Fishermen</title>
