--- a/khong-phan-loai/moi-tom-gia-cau-muc/attachment/moi-tom-gia-cau-muc-2-1/index.html
+++ b/khong-phan-loai/moi-tom-gia-cau-muc/attachment/moi-tom-gia-cau-muc-2-1/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/">
-	</head>
-	<body>
-		<script type="text/javascript">
-			window.location = "https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/";
-		</script>
 
-		<p>You are being redirected to <a href="https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/">https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/</a></p>
-	</body>
+<head>
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0;url=https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2290963707292524" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <script type="text/javascript">
+        window.location = "https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/";
+    </script>
+
+    <p>You are being redirected to <a href="https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/">https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/</a></p>
+</body>
+
 </html>
