--- a/gioi-thieu/index.html
+++ b/gioi-thieu/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta google-site-verification: googleb2c31df354e94e80.html>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2290963707292524" crossorigin="anonymous"></script>
     <!-- Search Engine Optimization by Rank Math - https://s.rankmath.com/home -->
     <title>Giới thiệu - Fishermen</title>
