--- a/lien-he/index.html
+++ b/lien-he/index.html
@@ -121,6 +121,7 @@
         }
     </script>
     <!-- /Rank Math WordPress SEO plugin -->
+    <meta google-site-verification: googleb2c31df354e94e80.html>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2290963707292524" crossorigin="anonymous"></script>
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//s.w.org">
