--- a/san-pham/chi-tron-illo/index.html
+++ b/san-pham/chi-tron-illo/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta google-site-verification: googleb2c31df354e94e80.html>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2290963707292524" crossorigin="anonymous"></script>
     <!-- Search Engine Optimization by Rank Math - https://s.rankmath.com/home -->
     <title>Chì tròn Illo - Fishermen</title>
@@ -956,8 +957,7 @@
                                                                     <div id="review_form">
                                                                         <div id="respond" class="comment-respond">
                                                                             <span id="reply-title" class="comment-reply-title">Hãy là người đầu tiên nhận xét &ldquo;Chì tròn Illo&rdquo; <small><a rel="nofollow" id="cancel-comment-reply-link" href="https://lengochung.github.io/wordpress/san-pham/chi-tron-illo/#respond" style="display:none;">Hủy</a></small></span>
-                                                                            <form
-                                                                                action="https://lengochung.github.io/wordpress/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
+                                                                            <form action="https://lengochung.github.io/wordpress/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
                                                                                 <p class="comment-notes"><span id="email-notes">Email của bạn sẽ không được hiển thị công khai.</span> Các trường bắt buộc được đánh dấu <span class="required">*</span></p>
                                                                                 <div class="comment-form-rating">
                                                                                     <label for="rating">Đánh giá của bạn&nbsp;<span class="required">*</span></label><select name="rating" id="rating" required>
@@ -978,7 +978,7 @@
                                                                                 </p>
                                                                                 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="4ac8e18753"></p>
                                                                                 <input type="hidden" id="ak_js" name="ak_js" value="92"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
-                                                                                </form>
+                                                                            </form>
                                                                         </div>
                                                                         <!-- #respond -->
                                                                     </div>
