--- a/san-pham/cuoc-petrolimex/index.html
+++ b/san-pham/cuoc-petrolimex/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta google-site-verification: googleb2c31df354e94e80.html>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2290963707292524" crossorigin="anonymous"></script>
     <!-- Search Engine Optimization by Rank Math - https://s.rankmath.com/home -->
     <title>Cước Petrolimex - Fishermen</title>
@@ -712,7 +713,8 @@
                                             <div class="elementor-element elementor-element-ed67045 elementor-widget elementor-widget-woocommerce-breadcrumb" data-id="ed67045" data-element_type="widget" data-widget_type="woocommerce-breadcrumb.default">
                                                 <div class="elementor-widget-container">
                                                     <nav class="woocommerce-breadcrumb"><a href="https://lengochung.github.io/wordpress">Trang chủ</a>&nbsp;&#47;&nbsp;<a href="https://lengochung.github.io/wordpress/danh-muc-san-pham/cuoc-cau-chuyen-dung/">Cước câu chuyên dụng</a>&nbsp;&#47;&nbsp;Cước
-                                                        Petrolimex</nav>
+                                                        Petrolimex
+                                                    </nav>
                                                 </div>
                                             </div>
                                         </div>
@@ -991,8 +993,7 @@
                                                                     <div id="review_form">
                                                                         <div id="respond" class="comment-respond">
                                                                             <span id="reply-title" class="comment-reply-title">Hãy là người đầu tiên nhận xét &ldquo;Cước Petrolimex&rdquo; <small><a rel="nofollow" id="cancel-comment-reply-link" href="https://lengochung.github.io/wordpress/san-pham/cuoc-petrolimex/#respond" style="display:none;">Hủy</a></small></span>
-                                                                            <form
-                                                                                action="https://lengochung.github.io/wordpress/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
+                                                                            <form action="https://lengochung.github.io/wordpress/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
                                                                                 <p class="comment-notes"><span id="email-notes">Email của bạn sẽ không được hiển thị công khai.</span> Các trường bắt buộc được đánh dấu <span class="required">*</span></p>
                                                                                 <div class="comment-form-rating">
                                                                                     <label for="rating">Đánh giá của bạn&nbsp;<span class="required">*</span></label><select name="rating" id="rating" required>
@@ -1013,7 +1014,7 @@
                                                                                 </p>
                                                                                 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="cd03dc51b0"></p>
                                                                                 <input type="hidden" id="ak_js" name="ak_js" value="53"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
-                                                                                </form>
+                                                                            </form>
                                                                         </div>
                                                                         <!-- #respond -->
                                                                     </div>
