--- a/blogs/moi-tom-gia-cau-muc/index.html
+++ b/blogs/moi-tom-gia-cau-muc/index.html
@@ -7,6 +7,7 @@
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <link rel="pingback" href="https://lengochung.github.io/wordpress/xmlrpc.php">
 
+    <meta google-site-verification: googleb2c31df354e94e80.html>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2290963707292524" crossorigin="anonymous"></script>
     <!-- Search Engine Optimization by Rank Math - https://s.rankmath.com/home -->
     <title>Mồi tôm giả câu mực ống, mực lá có 28 chấu - Fishermen</title>
