--- a/khong-phan-loai/moi-tom-gia-cau-muc/attachment/moi-tom-gia-cau-muc-2-1/index.html
+++ b/khong-phan-loai/moi-tom-gia-cau-muc/attachment/moi-tom-gia-cau-muc-2-1/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0;url=https://lengochung.github.io/wordpress/blogs/moi-tom-gia-cau-muc/">
+    <meta google-site-verification: googleb2c31df354e94e80.html>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2290963707292524" crossorigin="anonymous"></script>
 </head>
 
